--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,12 +13,13 @@
 </head>
 
 <body>
-  <body style="background-color:powderblue;" ></body>
+  <body style="background-color:powderblue;"></body>
   <div class = "center" id = "header">
     <div class="flexrow-container">
       <div class="standard-theme theme-selector"></div>
       <div class="light-theme theme-selector"></div>
       <div class="darker-theme theme-selector"></div>
+      <!-- <div class="funky-theme theme-selector"></div> -->
     </div>
   </div>
   
