--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,6 +16,7 @@
   <body style="background-color:powderblue;"></body>
   <div class = "center" id = "header">
     <div class="flexrow-container">
+      <div class="changecolortext theme-selector"></div>
       <div class="standard-theme theme-selector"></div>
       <div class="light-theme theme-selector"></div>
       <div class="darker-theme theme-selector"></div>
