Added fancy text effect as a workaround for light theme

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,7 +27,7 @@
   <div class="row">
     <div class="column" id = "columnleft">
       <div id = "header" style="font-family: 'Work Sans', sans-serif;">
-        <p id = "title"  style="font-size:8vw">Just do it</p>
+        <p id = "title"  style="font-size:8vw; filter: drop-shadow(rgb(32, 32, 32) 5px 5px); -webkit-text-stroke: 1px black">Just do it</p>
       </div>
       <div id="form">
         <form>
